# google_calendar_mcp

./: .env  .gitignore  IP_LIST  IP_MAIL_TABLE.md  README.md  mail_list  main.py  mcp_server_install.md  pyproject.toml  requirements.txt  sample.py
google_calendar_mcp/: __main__.py  google_auth.py  server.py
