[project]
name = "google-calendar-mcp"
version = "0.1.0"
description = "Google Calendar MCP stdio 서버"
authors = ["AnByoungHyun <your@email.com>"]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-api-python-client",
    "google-auth",
    "google-auth-oauthlib",
    "fastmcp"
]

[project.scripts]
google-calendar-mcp = "google_calendar_mcp.main:main"
